--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Material+Icons+Outlined" rel="stylesheet">
-  <link href="ress.css" media="all" rel="stylesheet" type="text/css" />
-  <link href="style.css" media="all" rel="stylesheet" type="text/css" />
+  <link href="https://c1p31031.github.io/myportfolio/ress.css" media="all" rel="stylesheet" type="text/css" />
+  <link href="https://c1p31031.github.io/myportfolio/style.css" media="all" rel="stylesheet" type="text/css" />
   <link rel="shortcut icon" href="img/favicon.ico" />
   <link rel=”canonical” href=”URLが入る” />
 </head>
