--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
               </div>
             </div>
             <div class="skill-item">
-              <p class="skill-img"><img src="img/https://github.com/c1p31031/myportfolio#:~:text=3%20minutes%20ago-,%E7%B0%BF%E8%A8%98.jpg,-Add%20files%20via.jpg" alt=""></p>
+              <p class="skill-img"><img src="https://github.com/c1p31031/myportfolio#:~:text=3%20minutes%20ago-,%E7%B0%BF%E8%A8%98.jpg,-Add%20files%20via.jpg" alt=""></p>
               <div class="skill-body">
                 <h3 class="skill-name">簿記</h3>
                 <p class="skill-text">
