--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                 <h2 class="title">ABOUT</h2>
                 <div class="profile">
                   <p class="profile-img">
-                    <img src="https://github.com/c1p31031/myportfolio/blob/main/IMG_3804%203.jpg?raw=true">
+                    <img src="https://github.com/c1p31031/myportfolio/blob/main/IMG_3804%203.jpg?" alt=""></p>
                   </p>
                   <div class="profile-body">
                     <p>
