--- a/index.html
+++ b/index.html
@@ -119,8 +119,7 @@
               <div class="container">
                 <h2 class="title">ABOUT</h2>
                 <div class="profile">
-                  <p class="profile-img">
-                    <img src="https://github.com/c1p31031/myportfolio/blob/main/IMG_3804%203.jpg?raw=true" alt=""></p>
+                  <p class="profile-img"><img src="https://github.com/c1p31031/myportfolio/blob/main/IMG_3804%203.jpg?raw=true" alt=""></p>
                   </p>
                   <div class="profile-body">
                     <p>
