--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
           <h2 class="title">SKILL</h2>
           <div class="skill-list">
             <div class="skill-item">
-              <p class="skill-img"><img src="img/java.jpg" alt=""></p>
+              <p class="skill-img"><img src="https://github.com/c1p31031/myportfolio/blob/main/java.jpg?raw=true" alt=""></p>
               <div class="skill-body">
                 <h3 class="skill-name">Java</h3>
                 <p class="skill-text">
