--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <div class="container">
           <h2 class="title">University Class</h2>
           <div class="works-list">
-            <a class="works-item" href="works-template.html">
+            <a class="works-item" href="work-template.html">
               <div class="works-img"><img src="img/works-sample-thumb.jpg" alt="" /></div>
               <p class="works-name">画像認識を使ったゴミ分別アプリケーション開発プロジェクト</p>
               <p class="works-info">プロジェクトマネージャー</p>
