--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
               </div>
             </div>
             <div class="skill-item">
-              <p class="skill-img"><img src="img/office.jpg" alt=""></p>
+              <p class="skill-img"><img src="https://github.com/c1p31031/myportfolio/blob/main/office.jpg?raw=true" alt=""></p>
               <div class="skill-body">
                 <h3 class="skill-name">Microsoft Office</h3>
                 <p class="skill-text">
