--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
               <p class="works-info">プロジェクトマネージャー</p>
             </a>
             <a class="works-item" href="puroensutoresu.html">
-              <div class="works-img"><img src="img/sutoresu.jpg" alt="" /></div>
+              <div class="works-img"><img src="https://github.com/c1p31031/myportfolio/blob/main/sutoresu.jpg?raw=true" alt="" /></div>
               <p class="works-name"> 社員のストレス早期発見のためのストレスチェックプロジェクト</p>
               <p class="works-info">プログラマー</p>
             </a>
