--- a/puroensutoresu.html
+++ b/puroensutoresu.html
@@ -47,7 +47,7 @@
           <h2 class="article-title">社員のストレス早期発見のためのストレスチェックプロジェクト</h2>
           <div class="article-body">
             <p>
-              <img src="img/sutoresu.jpg" alt="">
+              <img src="https://github.com/c1p31031/myportfolio/blob/main/sutoresu.jpg?raw=true" alt="">
             </p>
             <p>
               仕事や職業生活に関する強い不安、悩み、ストレスを感じる労働者の割合が平成28年時点で59.5%と仕事でストレスを感じている人が多い。
