--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
           <h2 class="title">University Class</h2>
           <div class="works-list">
             <a class="works-item" href="work-template.html">
-              <div class="works-img"><img src="img/works-sample-thumb.jpg" alt="" /></div>
+              <div class="works-img"><img src="https://github.com/c1p31031/myportfolio/blob/main/works-sample-thumb.jpg?raw=true" alt="" /></div>
               <p class="works-name">画像認識を使ったゴミ分別アプリケーション開発プロジェクト</p>
               <p class="works-info">プロジェクトマネージャー</p>
             </a>
