--- a/work-template.html
+++ b/work-template.html
@@ -47,7 +47,7 @@
           <h2 class="article-title">画像認識を使ったゴミ分別アプリケーション開発プロジェクト</h2>
           <div class="article-body">
             <p>
-              <img src="img/works-sample-thumb.jpg" alt="">
+              <img src="https://github.com/c1p31031/myportfolio/blob/main/works-sample-thumb.jpg?raw=true" alt="">
             </p>
             <p>
               各市区町村別にゴミの分別方法を提示しているが、使いにくかったり、簡単にゴミの分別がわかる形式になっていない所が多い。
