--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <header class="header ">
       <div class="container">
         <h1 class="header-logo">
-          <a href="index.html">YUSEI KASUGA
+          <a href="index.html">春日　優成
           </a>
         </h1>
         <nav class="gnav">
