--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             <a class="works-item" href="puroensutoresu.html">
               <div class="works-img"><img src="https://github.com/c1p31031/myportfolio/blob/main/sutoresu.jpg?raw=true" alt="" /></div>
               <p class="works-name"> 社員のストレス早期発見のためのストレスチェックプロジェクト</p>
-              <p class="works-info">プログラマー</p>
+              <p class="works-info">デザイナー</p>
             </a>
           </div>
         </div>
@@ -128,7 +128,8 @@
                     </p>
                     <p>
                       現在は、「画像認識を用いたゴミ分別アプリケーション」の開発をプロジェクトマネージャとして主導しており、１２月の学会発表に向けて開発を進めています。
-                      学業以外には、文教大学オープンキャンパス企画立案スタッフリーダー、居酒屋のアルバイトのアルバイトリーダーとして活動しています。
+                      学業以外には、文教大学オープンキャンパス企画立案スタッフリーダー、居酒屋のアルバイトのアルバイトリーダーとして活動しています。また、栃木県青少年会館
+　　　　　　　　　国際は県事業にも力を入れています。
       
                     </p>
                   </div>
