--- a/index.html
+++ b/index.html
@@ -128,8 +128,7 @@
                     </p>
                     <p>
                       現在は、「画像認識を用いたゴミ分別アプリケーション」の開発をプロジェクトマネージャとして主導しており、１２月の学会発表に向けて開発を進めています。
-                      学業以外には、文教大学オープンキャンパス企画立案スタッフリーダー、居酒屋のアルバイトのアルバイトリーダーとして活動しています。また、栃木県青少年会館
-　　　　　　　　　国際は県事業にも力を入れています。
+                      学業以外には、文教大学オープンキャンパス企画立案スタッフリーダー、居酒屋のアルバイトのアルバイトリーダーとして活動しています。また、栃木県青少年会館国際は県事業にも力を入れています。
       
                     </p>
                   </div>
