--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <header class="header ">
       <div class="container">
         <h1 class="header-logo">
-          <a href="index.html">春日　優成
+          <a href="index.html">YUSEI KASUGA
           </a>
         </h1>
         <nav class="gnav">
@@ -46,7 +46,7 @@
       <!-- mv -->
       <div class="mv">
         <div class="mv-container">
-          <p class="mv-title">YUSEI KASUGA</p>
+          <p class="mv-title">春日　優成</p>
           <p class="mv-subtitle">PORTFOLIO</p>
           <p class="mv-text">
             成長するための努力は惜しみません
