--- a/work-template.html
+++ b/work-template.html
@@ -62,7 +62,7 @@
             <h3>エンドユーザ</h3>
             <p>神奈川県民</p>
             <h3>開発について</h3>
-            <p>現在はデザイナーがAndroid Studioの学習、フロントエンドの作成を行なっており、プログラマーがGoogle Cloud Vision APIを使った画像認識の技術検証
+            <p>現在はデザイナーがAndroid Studioの学習、フロントエンドの作成、プログラマーがGoogle Cloud Vision APIを使った画像認識の技術検証、
               Auto MLを使った機械学習を進めており、１２月の学会発表までに完成予定です。
             </p>
           </div>
