--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                   </p>
                   <div class="profile-body">
                     <p>
-                      2003年栃木県生まれ。作新学院高等学校卒業後、情報学や情報システムに対する興味や関心があり、文教大学情報学部情報システム学科に進学。
+                      2003年栃木県生まれ。作新学院高等学校卒業後、情報学や情報システムに対する興味や関心があり、情報学を専門的に学べる大学に進学。
                       大学では、基礎的なプログラミング技術の習得や、システム開発の要件定義から運用保守までといった全体の流れを中心に学んでいます。
                     </p>
                     <p>
