--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
             <a class="contact-item" href="https://instagram.com/sra_2426?igshid=OGQ5ZDc2ODk2ZA==" target="_blank" rel="noopener">Instagram</a>
             <a class="contact-item" href="https://www.facebook.com/yuseikasuga1" target="_blank" rel="noopener">Facebook
             </a>
-            <span class="contact-item">c1p31031@bunkyo.ac.jp</span>
+            <span class="contact-item">yuseikasuga@yahoo.co.jp</span>
           </div>
         </div>
       </section>
